working to adjust player amidst unresponsive code

--- a/music.html
+++ b/music.html
@@ -6,8 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="./css/audio.css">
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		 
-		
 	</head>
 	<body>
 <div class="container ">
@@ -41,10 +39,10 @@
       			Flame and Shadow is a work in progress.  Music excerpts will be posted here as they get completed.
 	      	</p><br><br><br><br>
 	      	<div class="container-b " style="position: absolute;">
-				<div class="player-body row no-responsive">
-					<div class="col-5 col-sm-7 col-md-auto mx-md-auto bg-white rounded paper-box-shadow">
+				<div class=" row ">
+					<div class="player-body no-responsive col-5 col-sm-7 col-md-auto mx-md-auto bg-white rounded paper-box-shadow">
 						<div class="row pt-2 pb-3 bg- rounded-top title-div">
-							<!-- <marquee width="60%" scrollDelay="200" class="px-3">  -->
+							<!-- <marquee width="100%" scrollDelay="200" class="px-3">  -->
 								<small class="track-title px-3">
 									Press Play
 								</small>
