left align the audio player

--- a/music.html
+++ b/music.html
@@ -87,13 +87,11 @@
 				<section id="audio-player-section">
 					<div class="container-fluid">
 						<div class="player-body row ">
-							<div class="col-auto mx-auto bg-white rounded paper-box-shadow">
+							<div class="col-auto ml-3 bg-white rounded paper-box-shadow">
 								<div class="row pt-2 pb-3 bg- rounded-top title-div">
-									<!-- <marquee width="60%" scrollDelay="200">  -->
-										<small class="track-title px-3">
-											Press Play
-										</small>
-									<!-- </marquee>  -->
+									<small class="track-title px-3">
+										Press Play
+									</small>
 								</div>
 								<div class="row py-3">
 									<div class="col-auto d-flex align-items-center play-btn " >
